--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -70,5 +70,85 @@ header nav ul li {
  main > section.main{
 
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
+    gap: 0.5rem;
  }
+
+ /* cards */
+.card {
+  background-color: var(--third);
+  border-radius: 0.5rem;
+  padding: 0.4rem;
+}
+.card > h3,
+.card > h4 {
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 1010px) {
+  main > section.main {
+    grid-template-columns: auto auto auto;
+  }
+}
+@media (max-width: 760px) {
+  main > section.main {
+    grid-template-columns: auto auto;
+  }
+}
+@media (max-width: 500px) {
+  main > section.main {
+    grid-template-columns: auto;
+  }
+}
+
+/* Specific Login */
+main > section.auth {
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main > section.auth > h1 {
+  color: var(--primary);
+  font-weight: 500;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+main > section.auth > form {
+  background-color: var(--third);
+  border: 0.2rem solid var(--fourth);
+  border-radius: 1rem;
+  padding: 1.5rem;
+}
+main > section.auth > form > div {
+  background-color: var(--white);
+  border: 0.15rem solid var(--fourth);
+  border-radius: 0.6rem;
+  display: flex;
+  margin: 0.5rem 0;
+}
+main > section.auth > form > div > img {
+  height: 2.5rem;
+  padding: 0.3rem;
+}
+main > section.auth > form > div > input {
+  width: 100%;
+  font-size: 1rem;
+  border: 0;
+  background-color: transparent;
+}
+main > section.auth > form > p > a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: 500;
+}
+main > section.auth > form > p > button {
+  background-color: var(--fourth-light);
+  color: var(--white);
+  padding: 0.6rem;
+  border: 0;
+  border-radius: 0.6rem;
+  width: 5rem;
+  margin-left: 0.5rem;
+}
